# Veloura-AI-Stylist

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  boards.py  outfits.py  pinterest.py  products.py  schedule.py
backend/app/core/: config.py  enums.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  generated_board.py  outfit.py  pinterest.py  product.py  scheduled_post.py  user.py
backend/app/repositories/: base.py  board.py  outfit.py  pinterest.py  product.py  schedule.py
backend/app/schemas/: analytics.py  board.py  common.py  outfit.py  pinterest.py  product.py  schedule.py
backend/app/services/: ai_tagging.py  analytics.py  board_generation.py  captioning.py  earnings.py  outfit_generation.py  pinterest.py  product_import.py  recommendations.py  storage.py  trending.py
backend/app/tasks/: celery_app.py  jobs.py
backend/app/utils/: seed.py
backend/tests/: test_ai_tagging.py  test_outfit_generation.py  test_product_import.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MetricCard.tsx  SectionCard.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/layouts/: AppShell.tsx
frontend/src/lib/: demoApi.ts
(+8 files in other folders)
