[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veloura-backend"
version = "0.1.0"
description = "Backend for Veloura AI Stylist"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.13.2",
  "boto3>=1.34.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "openai>=1.35.0",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "redis>=5.0.7",
  "sqlalchemy>=2.0.31",
  "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
